@@ -74,11 +74,6 @@ bool justLagged = false;
 bool frameAdvanceLagSkip = false; //If this is true, frame advance will skip over lag frame (i.e. it will emulate 2 frames instead of 1)
 
 bool movieSubtitles = true; //Toggle for displaying movie subtitles
-bool autoMovieBackup = false; //Toggle that determines if movies should be backed up automatically before altering them
-
-// Function declarations
-void MakeBackupMovie(bool dispMessage);			//Makes a backup of current movie file
-bool CheckFileExists(const char* filename);	//Receives a filename (fullpath) and checks to see if that file exists
 
 FCEUGI::FCEUGI()
 : filename(0)
@@ -1088,87 +1083,4 @@ uint8 FCEU_ReadRomByte(uint32 i) {
 	if(i < 16+PRGsize[0])return PRGptr[0][i-16];
 	if(i < 16+PRGsize[0]+CHRsize[0])return CHRptr[0][i-16-PRGsize[0]];
 	return 0;
-}
-
-void MakeBackupMovie(bool dispMessage)
-{
-	//This function generates backup movie files
-	string currentFn;					//Current movie fillename
-	string backupFn;					//Target backup filename
-	string tempFn;						//temp used in back filename creation
-	stringstream stream;
-	int x;								//Temp variable for string manip
-	bool exist = false;					//Used to test if filename exists
-	bool overflow = false;				//Used for special situation when backup numbering exceeds limit
-
-	currentFn = curMovieFilename;		//Get current moviefilename
-	backupFn = curMovieFilename;		//Make backup filename the same as current moviefilename
-	x = backupFn.find_last_of(".");		 //Find file extension
-	backupFn = backupFn.substr(0,x);	//Remove extension
-	tempFn = backupFn;					//Store the filename at this point
-	for (unsigned int backNum=0;backNum<999;backNum++) //999 = arbituary limit to backup files
-	{
-		stream.str("");					 //Clear stream
-		if (backNum > 99)
-			stream << "-" << backNum;	 //assign backNum to stream
-		else if (backNum <=99 && backNum >= 10)
-			stream << "-0";				//Make it 010, etc if two digits
-		else
-			stream << "-00" << backNum;	 //Make it 001, etc if single digit
-		backupFn.append(stream.str());	 //add number to bak filename
-		backupFn.append(".bak");		 //add extension
-
-		exist = CheckFileExists(backupFn.c_str());	//Check if file exists
-		
-		if (!exist) 
-			break;						//Yeah yeah, I should use a do loop or something
-		else
-		{
-			backupFn = tempFn;			//Before we loop again, reset the filename
-			
-			if (backNum == 999)			//If 999 exists, we have overflowed, let's handle that
-			{
-				backupFn.append("-001.bak"); //We are going to simply overwrite 001.bak
-				overflow = true;		//Flag that we have exceeded limit
-				break;					//Just in case
-			}
-		}
-	}
-
-	MovieData md = currMovieData;								//Get current movie data
-	std::fstream* outf = FCEUD_UTF8_fstream(backupFn, "wb");	//open/create file
-	md.dump(outf,false);										//dump movie data
-	delete outf;												//clean up, delete file object
-	
-	//TODO, decide if fstream successfully opened the file and print error message if it doesn't
-
-	if (dispMessage)	//If we should inform the user 
-	{
-		if (overflow)
-			FCEUI_DispMessage("Overwriting %s",backupFn.c_str()); //Inform user of overflow
-		else
-			FCEUI_DispMessage("%s created",backupFn.c_str()); //Inform user of backup filename
-	}
-}
-
-bool CheckFileExists(const char* filename)
-{
-	//This function simply checks to see if the given filename exists
-	string checkFilename;
-	checkFilename = filename;
-		
-	//Check if this filename exists
-	fstream test;
-	test.open(checkFilename.c_str(),fstream::in);
-		
-	if (test.fail())
-	{
-		test.close();
-		return false;
-	}
-	else
-	{
-		test.close();
-		return true;
-	}
 }
